tests/ui/delegation/generics/query-cycle-oom-154169.stderr
error[E0107]: missing generics for struct `test_1::S`
  --> $DIR/query-cycle-oom-154169.rs:6:32
   |
LL |         fn foo(&self, x: T) -> S { x }
   |                                ^ expected 1 generic argument
   |
note: struct defined here, with 1 generic parameter: `T`
  --> $DIR/query-cycle-oom-154169.rs:11:12
   |
LL |     struct S<T>(F, T);
   |            ^ -
help: add missing generic argument
   |
LL |         fn foo(&self, x: T) -> S<T> { x }
   |                                 +++

error[E0220]: associated type `Assoc` not found for `Self`
  --> $DIR/query-cycle-oom-154169.rs:21:27
   |
LL |         fn foo() -> Self::Assoc;
   |                           ^^^^^ associated type `Assoc` not found

error[E0046]: not all trait items implemented, missing: `foo`
  --> $DIR/query-cycle-oom-154169.rs:26:5
   |
LL |         fn foo() -> Self::Assoc;
   |         ------------------------ `foo` from trait
...
LL |     impl Trait for u8 {
   |     ^^^^^^^^^^^^^^^^^ missing `foo` in implementation

error[E0433]: cannot find module or crate `to_reuse` in this scope
  --> $DIR/query-cycle-oom-154169.rs:14:15
   |
LL |         reuse to_reuse::foo { &self.0 }
   |               ^^^^^^^^ use of unresolved module or unlinked crate `to_reuse`
   |
   = help: you might be missing a crate named `to_reuse`

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0046, E0107, E0220, E0433.
For more information about an error, try `rustc --explain E0046`.
